chore: add simple emoji page for testing layout

--- a/backend/src/main/resources/static/index.html
+++ b/backend/src/main/resources/static/index.html
@@ -3,8 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>FishMaster</title>
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            font-size: 5rem;
+            background-color: #f0f8ff;
+        }
+    </style>
 </head>
 <body>
-<h1>FIsh</h1>
+<h1>🦈🐡🐠🐟</h1>
 </body>
 </html>
