--- a/frontend/FishMaster--/index.html
+++ b/frontend/FishMaster--/index.html
@@ -7,6 +7,7 @@
     <title>fishmaster</title>
   </head>
   <body>
+    <h1>FishMater here, hello :D</h1>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
