--- a/frontend/FishMaster/index.html
+++ b/frontend/FishMaster/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <link rel="icon" href="./public/LittleFishWhite.ico" />
+  <link rel="icon" href="./public/FishMaterAppLogo.ico" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>FishMaster</title>
