feat: Enhance PWA support and caching strategies

--- a/frontend/FishMaster/index.html
+++ b/frontend/FishMaster/index.html
@@ -9,6 +9,13 @@
   <meta name="description"
     content="FishMaster: Smart aquarium monitoring dashboard. Track water quality, fish health, and more." />
 
+  <!-- PWA Meta Tags -->
+  <meta name="theme-color" content="#e90e2b" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+  <meta name="apple-mobile-web-app-title" content="FishMaster" />
+  <link rel="apple-touch-icon" href="/pwa-192x192.png" />
+  <link rel="mask-icon" href="/Fishtyi.png" color="#e90e2b" />
 
   <!-- Open Graph / Social Sharing -->
   <meta property="og:title" content="FishMaster - Smart Aquarium Monitoring" />
@@ -18,7 +25,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://yourdomain.com" />
 
-  <link rel="icon" href="/public/FishMaterAppLogo.ico" type="image/x-icon" />
+  <link rel="icon" href="/FishMaterAppLogo.ico" type="image/x-icon" />
 
   <link rel="preload" as="image" href="/assets/Fishlogo.svg" />
   <link rel="preload" as="font" href="/assets/fonts/SpecialElite.woff2" type="font/woff2" crossorigin="anonymous" />
