feat(dashboard): Add Tank Health Score calculation and display in dashboard feat(styles): Enhance styles for Tank Health Score card fix(profile): Update profile data handling to include username fallback fix(api): Implement mock user for profile flows and improve error handling

--- a/frontend/FishMaster/index.html
+++ b/frontend/FishMaster/index.html
@@ -28,16 +28,8 @@
   <link rel="icon" href="/FishMaterAppLogo.ico" type="image/x-icon" />
 
   <link rel="preload" as="image" href="/assets/Fishlogo.svg" />
-  <link rel="preload" as="font" href="/assets/fonts/SpecialElite.woff2" type="font/woff2" crossorigin="anonymous" />
-
-  <style>
-    @font-face {
-      font-family: 'Special Elite';
-      src: url('/assets/fonts/SpecialElite.woff2') format('woff2'),
-        url('/assets/fonts/SpecialElite.woff') format('woff');
-      font-weight: 400;
-      font-style: normal;
-      font-display: swap;
+  <!-- Google Fonts: Special Elite -->
+  <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet" />
     }
   </style>
 </head>
